--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <script src="https://kit.fontawesome.com/53bc04ef53.js" crossorigin="anonymous"></script>
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+
     <!-- <script src="https://cdn.amcharts.com/lib/5/index.js"></script>
     <script src="https://cdn.amcharts.com/lib/5/percent.js"></script>
     <script src="https://cdn.amcharts.com/lib/5/themes/Animated.js"></script> -->
@@ -54,15 +56,35 @@
         </div>
         <div id="home" class="md:px-60 px-4 m-auto md:mt-20 mt-10 text-center">
             <div class="md:px-34 px-4">
-                <h2 class="md:text-8xl font-bold text-3xl relative" style="color: #4BFF2C;">
-                    <img src="/assets/imgs/ab1.png" class="absolute -top-10 md:block hidden" alt="" style="left: -12%;">
-                    Baby SafuuGO
+                <h2 class="md:text-8xl font-bold text-3xl relative"
+                >
+                    <img src="/assets/imgs/ab1.png" class="absolute -top-10 md:block hidden" alt="" style="left: -12%;"
+                        data-aos-delay="500"
+                        data-aos-duration="2000"
+                        data-aos="fade-down"
+                    >
+                    <div
+                        data-aos-delay="500"
+                        data-aos-duration="1000"
+                        data-aos="flip-right"
+                        style="color: #4BFF2C;"
+                    >
+                        Baby SafuuGO
+                    </div>
                 </h2>
-                <h3 class="md:text-6xl font-bold text-xl md:mt-10 mt-3">
+                <h3 class="md:text-6xl font-bold text-xl md:mt-10 mt-3"
+                    data-aos-delay="1000"
+                    data-aos-duration="1500"
+                    data-aos="flip-right"
+                >
                     A project built for <span style="color: #FFE900;">Safuu</span> and <span style="color: #FFE900;">SafuuGo</span> Fans!
                 </h3>
             </div>
-            <div class="md:mt-10 mt-4 rounded-xl md:p-10 p-2 md:text-xl text-base relative" style="border: 2px solid #4BFF2C">
+            <div class="md:mt-10 mt-4 rounded-xl md:p-10 p-2 md:text-xl text-base relative" style="border: 2px solid #4BFF2C"
+                data-aos-delay="1500"
+                data-aos-duration="2000"
+                data-aos="zoom-in"
+            >
                 <img src="/assets/imgs/fulllogo.png" class="m-auto md:pb-4 pb-2" alt="">
                 <div>
                     Welcome to Baby SafuuGO the next hidden gem and also a loyal supporter of SafuuGO.
@@ -83,7 +105,11 @@
             <div class="md:text-6xl font-bold text-center text-3xl">
                 FEATURES
             </div>
-            <div class="md:flex rounded-3xl  md:mt-20 mt-10 md:p-10 p-4 items-center" style="border: 2px solid #4BFF2C">
+            <div class="md:flex rounded-3xl  md:mt-20 mt-10 md:p-10 p-4 items-center" style="border: 2px solid #4BFF2C"
+                data-aos-delay="500"
+                data-aos-duration="2000"
+                data-aos="fade-left"
+            >
                 <div class="md:w-1/2">
                     <h3 class="md:text-2xl text-lg font-bold" style="color: #01BE01;">
                         Reward for BBSGO Holders
@@ -104,7 +130,11 @@
                     <img src="/assets/imgs/ft1.png" class="m-auto md:w-3/5" alt="">
                 </div>
             </div>
-            <div class="md:flex rounded-3xl  md:mt-20 mt-10 md:p-10 p-4 items-center" style="border: 2px solid #4BFF2C">
+            <div class="md:flex rounded-3xl  md:mt-20 mt-10 md:p-10 p-4 items-center" style="border: 2px solid #4BFF2C"
+                data-aos-delay="500"
+                data-aos-duration="2000"
+                data-aos="fade-right"
+            >
                 <div class="md:w-1/2">
                     <h3 class="md:text-2xl text-lg font-bold" style="color: #01BE01;">
                         Decentralized Autonomous Organization (DAO)
@@ -119,7 +149,11 @@
                     <img src="/assets/imgs/ft2.png" class="m-auto md:w-3/5" alt="">
                 </div>
             </div>
-            <div class="md:flex rounded-3xl  md:mt-20 mt-10 md:p-10 p-4 items-center" style="border: 2px solid #4BFF2C">
+            <div class="md:flex rounded-3xl  md:mt-20 mt-10 md:p-10 p-4 items-center" style="border: 2px solid #4BFF2C"
+                data-aos-delay="500"
+                data-aos-duration="2000"
+                data-aos="fade-left"
+            >
                 <div class="md:w-1/2">
                     <h3 class="md:text-2xl text-lg font-bold" style="color: #01BE01;">
                         Baby SafuuGo NFT Creation
@@ -135,19 +169,27 @@
                 </div>
             </div>
         </div>
-        <div class="md:px-60 m-auto px-4 md:mt-40 mt-10 " id="tokenomics">
+        <div class="md:px-40 m-auto px-4 md:mt-40 mt-10 " id="tokenomics">
             <div class="md:text-6xl font-bold text-center text-3xl">
                 TOKENOMICS
             </div>
             <!-- <div>
                 <div id="chartdiv"></div>														
             </div> -->
-            <div class="md:flex items-center">
+            <div class="md:flex items-center  md:mt-20 mt-4">
                 <div class="md:w-1/2 ">
-                    <img src="/assets/imgs/tokenomic.png" class="m-auto" alt="">
+                    <img src="/assets/imgs/tokenomic.png" class="m-auto" alt=""
+                        data-aos-delay="500"
+                        data-aos-duration="1000"
+                        data-aos="zoom-in"
+                    >
                 </div>
                 <div class="md:w-1/2">
-                    <div style="border: 1px solid #4BFF2C" class="rounded-xl md:p-8 p-2 w-fit m-auto">
+                    <div style="border: 1px solid #4BFF2C" class="rounded-xl md:p-8 p-2 w-fit m-auto"
+                        data-aos-delay="1000"
+                        data-aos-duration="2000"
+                        data-aos="fade-up"
+                    >
                         <div class="text-center md:text-3xl text-lg" style="color: #4BFF2C;">
                             Infomation
                         </div>
@@ -163,7 +205,11 @@
                             </div>
                         </div>
                     </div>
-                    <div style="border: 1px solid #4BFF2C" class="rounded-xl md:p-8 p-2 w-fit m-auto md:mt-10 mt-3">
+                    <div style="border: 1px solid #4BFF2C" class="rounded-xl md:p-8 p-2 w-fit m-auto md:mt-10 mt-3"
+                        data-aos-delay="1500"
+                        data-aos-duration="2000"
+                        data-aos="fade-up"
+                    >
                         <div class="text-center md:text-3xl text-lg" style="color: #4BFF2C;">
                             Distribution
                         </div>
@@ -216,12 +262,16 @@
                     </div>
                 </div>
             </div>
-            <div class="rounded-3xl  md:mt-20 mt-10 md:p-10 p-4" style="border: 2px solid #4BFF2C">
+            <div class="rounded-3xl  md:mt-20 mt-10 md:p-10 p-4" style="border: 2px solid #4BFF2C"
+                data-aos-delay="1000"
+                data-aos-duration="2000"
+                data-aos="fade-up"
+            >
                 <div class="text-center md:text-4xl text-xl" style="color: #4BFF2C;">
                     TAX 6/6
                 </div>
                 <div class="flex items-center md:mt-5 mt-3">
-                    <div class="md:text-2xl text-lg w-1/2 text-center" style="border-right: 1px solid #01BE01;">
+                    <div class="md:text-2xl text-lg w-1/2 text-center md:px-10 px-2" style="border-right: 1px solid #01BE01;">
                         3% reward $SGO for $BBSGO holders
                     </div>
                     <div class="md:text-2xl text-lg w-1/2 text-center">
@@ -230,16 +280,20 @@
                 </div>
             </div>
         </div>
-        <div class="md:px-60 m-auto px-4 md:mt-40 mt-10 " id="roadmap">
+        <div class="md:px-20 m-auto px-4 md:mt-40 mt-10 " id="roadmap">
             <div class="md:text-6xl font-bold text-center text-3xl">
                 ROADMAP
             </div>
             <div class="md:flex md:mt-20 mt-10">
-                <div class="rounded-3xl  md:mt-20 mt-10 md:p-10 p-4 md:w-1/3 md:mr-10" style="border: 2px solid #4BFF2C">
+                <div class="rounded-3xl  md:mt-20 mt-10 md:p-6 p-4 md:w-1/3 md:mr-10" style="border: 2px solid #4BFF2C"
+                    data-aos-delay="500"
+                    data-aos-duration="1000"
+                    data-aos="fade-up"
+                >
                     <div class="text-center md:text-4xl text-xl" style="color: #4BFF2C;">
                         PHASE 1
                     </div>
-                    <div class="md:pt-10 pt-3">
+                    <div class="md:pt-10 pt-3 md:text-xl ">
                         <ul>
                             <li>
                                 Development and deployment of the Baby Safuu Go smart contract
@@ -256,11 +310,15 @@
                         </ul>
                     </div>
                 </div>
-                <div class="rounded-3xl  md:mt-20 mt-10 md:p-10 p-4 md:w-1/3 md:mr-10" style="border: 2px solid #4BFF2C">
+                <div class="rounded-3xl  md:mt-20 mt-10 md:p-6 p-4 md:w-1/3 md:mr-10" style="border: 2px solid #4BFF2C"
+                    data-aos-delay="1500"
+                    data-aos-duration="1000"
+                    data-aos="fade-up"
+                >
                     <div class="text-center md:text-4xl text-xl" style="color: #4BFF2C;">
                         PHASE 2
                     </div>
-                    <div class="md:pt-10 pt-3">
+                    <div class="md:pt-10 pt-3 md:text-xl">
                         <ul>
                             <li>
                                 Initiating the presale phase on the Pinksale platform
@@ -277,11 +335,15 @@
                         </ul>
                     </div>
                 </div>
-                <div class="rounded-3xl  md:mt-20 mt-10 md:p-10 p-4 md:w-1/3" style="border: 2px solid #4BFF2C">
+                <div class="rounded-3xl  md:mt-20 mt-10 md:p-6 p-4 md:w-1/3" style="border: 2px solid #4BFF2C"
+                    data-aos-delay="2500"
+                    data-aos-duration="1000"
+                    data-aos="fade-up"
+                >
                     <div class="text-center md:text-4xl text-xl" style="color: #4BFF2C;">
                         PHASE 3
                     </div>
-                    <div class="md:pt-10 pt-3">
+                    <div class="md:pt-10 pt-3 md:text-xl">
                         <ul>
                             <li>
                                 Development of the Baby Safuu Go NFT collection, featuring unique and limited-edition collectibles
@@ -306,14 +368,27 @@
             </div> 
             <div class="justify-center flex md:mt-20 mt-10 items-center">
                 <a href="http://pinksale.finance" target="_blank" rel="noopener noreferrer">
-                    <img src="/assets/imgs/pink.png" style="height: 200px;" alt="">
+                    <img src="/assets/imgs/pink.png" style="height: 200px;" alt=""
+                        data-aos-delay="500"
+                        data-aos-duration="1000"
+                        data-aos="fade-right"
+                    >
                 </a>
                 <a href="http://dexview.com" target="_blank" rel="noopener noreferrer">
-                    <img src="/assets/imgs/dex.png" style="height: 280px;" alt="">
+                    <img src="/assets/imgs/dex.png" style="height: 280px;" alt=""
+                        data-aos-delay="500"
+                        data-aos-duration="1000"
+                        data-aos="fade-left"
+                    >
                 </a>
             </div>           
         </div>
     </main>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+        AOS.init();
+      </script>
+    
     <script src="/assets/js/nav.js"></script>
     <script src="/assets/js/chart.js"></script>
 </body>
