--- a/index.html
+++ b/index.html
@@ -102,7 +102,11 @@
             </div>
         </div>
         <div class="md:px-60 m-auto px-4 md:mt-40 mt-10 " id="features">
-            <div class="md:text-6xl font-bold text-center text-3xl">
+            <div class="md:text-6xl font-bold text-center text-3xl"
+                data-aos-delay="500"
+                data-aos-duration="2000"
+                data-aos="fade-right"
+            >
                 FEATURES
             </div>
             <div class="md:flex rounded-3xl  md:mt-20 mt-10 md:p-10 p-4 items-center" style="border: 2px solid #4BFF2C"
@@ -170,7 +174,11 @@
             </div>
         </div>
         <div class="md:px-40 m-auto px-4 md:mt-40 mt-10 " id="tokenomics">
-            <div class="md:text-6xl font-bold text-center text-3xl">
+            <div class="md:text-6xl font-bold text-center text-3xl"
+                data-aos-delay="500"
+                data-aos-duration="2000"
+                data-aos="fade-right"
+            >
                 TOKENOMICS
             </div>
             <!-- <div>
@@ -281,7 +289,11 @@
             </div>
         </div>
         <div class="md:px-20 m-auto px-4 md:mt-40 mt-10 " id="roadmap">
-            <div class="md:text-6xl font-bold text-center text-3xl">
+            <div class="md:text-6xl font-bold text-center text-3xl"
+                data-aos-delay="500"
+                data-aos-duration="2000"
+                data-aos="fade-right"
+            >
                 ROADMAP
             </div>
             <div class="md:flex md:mt-20 mt-10">
@@ -363,7 +375,11 @@
             </div>
         </div>
         <div class="md:px-60 m-auto px-4 md:mt-40 mt-10 md:pb-20 pb-10" id="roadmap">
-            <div class="md:text-6xl font-bold text-center text-3xl">
+            <div class="md:text-6xl font-bold text-center text-3xl"
+                data-aos-delay="500"
+                data-aos-duration="2000"
+                data-aos="fade-right"
+            >
                 PARTNER
             </div> 
             <div class="justify-center flex md:mt-20 mt-10 items-center">
