--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="header">
             <nav class="">
                 <div class="logo p-2">
-                    <a href="#home"><img loading="lazy" class="" src="assets/imgs/logo.png" alt="Logo Image"></a>
+                    <a href="#home"><img loading="lazy" class="" src="assets/imgs/logo.png" style="height: 100px;" alt="Logo Image"></a>
                 </div>
                 <div class="hamburger">
                     <div class="line1"></div>
