--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
     <script src="https://cdn.amcharts.com/lib/5/themes/Animated.js"></script> -->
 </head>
 <body>
-    <main>
+    <main  id="home" >
         <div class="header">
             <nav class="">
                 <div class="logo p-2">
-                    <a href="#home"><img loading="lazy" class="" src="assets/imgs/logo.png" style="height: 100px;" alt="Logo Image"></a>
+                    <a href="/"><img loading="lazy" class="" src="assets/imgs/logo.png" style="height: 100px;" alt="Logo Image"></a>
                 </div>
                 <div class="hamburger">
                     <div class="line1"></div>
@@ -54,7 +54,7 @@
                 </ul>
             </nav>
         </div>
-        <div id="home" class="md:px-60 px-4 m-auto md:mt-20 mt-10 text-center">
+        <div class="md:px-60 px-4 m-auto md:mt-20 mt-10 text-center">
             <div class="md:px-34 px-4">
                 <h2 class="md:text-8xl font-bold text-3xl relative"
                 >
