--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                 </div>
                 <ul class="nav-links">
                     <li><a href="#home">Introduction</a></li>
+                    <li><a href="https://galaxy-2.gitbook.io/baby-safuu-go/" target="_blank">Whitepaper</a></li>
                     <li><a href="#features">Features</a></li>
                     <li><a href="#tokenomics">Tokenomics</a></li>
                     <li><a href="#roadmap">Roadmap</a></li>
