--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         </a>
                     </div>
                     <!-- </li> -->
-                    <a href="#" target="_blank">
+                    <a href="https://www.pinksale.finance/launchpad/0x494Dd5B04E37EEE2495900a681823b4024c35a89?chain=BSC" target="_blank">
                         <button class="btn md:px-6 md:py-2 py-1 px-4 rounded-2xl font-bold">
                             Join Presale
                         </button>
